TaskApp.css
/* The CSS file that accompanies the TaskApp DWC application */

/* The TaskApp's CSS custom properties              */
/* ================================================ */
:root {
    --app-color-h: 15;
    --app-color-s: 75%;
    --app-color-b: 35%;
    --app-color-primary: hsl(var(--app-color-h), var(--app-color-s), var(--app-color-b));
    --app-color-window-bg: hsl(0, 0%, 95%);
    --app-color-navbar-bg: hsl(var(--app-color-h), calc(var(--app-color-s) * 0.75), 95%);
    --app-color-text-normal-l: 20%;
    --app-color-text-light-l:  40%;
    --app-color-text-faint-l:  60%;
    --app-color-text-normal: hsl(0, 0%, var(--app-color-text-normal-l));
    --app-color-text-light:  hsl(0, 0%, var(--app-color-text-light-l));
    --app-color-text-faint:  hsl(0, 0%, var(--app-color-text-faint-l));
    --app-font-task: var(--bbj-font-family);
}

/* Override the DWC's default CSS custom properties */
/* ================================================ */
:root {
    --bbj-font-family: 'AR One Sans', 'Gabarito', 'K2D', 'Overlock', 'Encode Sans Semicondensed', 'Aller', 'Alatsi', 'Akrobat', var(--bbj-font-family-sans);
    --bbj-color-body-text: var(--app-color-text-normal);
    --bbj-color-primary-h: var(--app-color-h);
    --bbj-color-default-h: var(--app-color-h);
    --bbj-color-default-s: 25%;
    --bbj-list-padding: calc(var(--bbj-space) / 2);
}


/* Dark mode CSS custom properties                  */
/* ================================================ */
[data-app-theme="dark"], [data-app-theme="dark-pure"] {
    --app-color-navbar-bg: hsl(var(--app-color-h), calc(var(--app-color-s) * 0.50), 15%);
    --app-color-text-normal-l: 90%;
    --app-color-text-light-l:  70%;
    --app-color-text-faint-l:  60%;
}


/* Global definitions for multiple controls         */
/* ================================================ */

/* Modify the entire DOM */
html, body, .BBjWindowManagerDesktop {
    background: var(--app-color-window-bg);
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100%;
    display: flex;
}

/* Modify ALL BBjButtons by setting their color and font size & weight */
bbj-button::part(label) {
    /* color: var(--app-color-primary); */
    font-size: var(--bbj-font-size-l);
    font-weight: var(--bbj-font-weight-semibold);
}

/* Layout                                    */
/* https://vue-grid-generator.netlify.app/
{"areas":[["winNavBar","winToolBar"],["winNavBar","winTitle"],["winNavBar","winTasks"]],"columns":["5em","1fr"],"rows":["3em","10em","1fr"],"gridWidth":"100%","gridHeight":"100%"}
*/
/* ================================================ */

.BBjSimpleWindow {
    width: 100%;
    height: 100%;
}

.winMain {
    display: flex;
    max-height: 100vh;
}

.winMain .BBjPanel {
    display: grid;
    width: 100%;
    height: 100%;
    grid-template-areas: 'winNavBar winToolBar' 'winNavBar winTitle' 'winNavBar winTasks';
    grid-template-columns: 12em 1fr;
    grid-template-rows: 3em 4em 1fr;
}

.winToolBar, .winTitle, .winTasks {
    margin: 0 auto;
    width: 100%;
    padding-left: 5%;
    padding-right: 5%;
}

.winNavBar {
    grid-area: winNavBar;
    background-color: var(--app-color-navbar-bg);
    display: flex;
    flex-flow: column;
    align-items: flex-start;
    justify-content: flex-start;
    width: 100%;
    padding: var(--bbj-space);
    gap: calc(var(--bbj-space) * 3);
}

.winToolBar {
    grid-area: winToolBar;
    max-width: 100%;
    display: flex;
    flex-flow: row;
    align-items: center;
    padding: var(--bbj-space);
    gap: var(--bbj-space) var(--bbj-space);

    /* This keeps the buttons together and centers them on the display */
    /* width: fit-content;
    justify-content: space-evenly; */

    /* This keeps the buttons on the far right edge of the display */
    width: 100%;
    justify-content: end;
}

.winTitle {
    grid-area: winTitle;
    display: flex;
    flex-flow: column;
    align-items: stretch;
    justify-content: center;
}
.winTasks {
    grid-area: winTasks;
    overflow-y: scroll;
    overflow-x: hidden;
    width: 100%;
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    justify-content: center;
}

.taskList {
    min-width: 200px;
    max-width: 500px;
    overflow-y: scroll;
    margin-top: 5%;
    padding: 5%;
}


/* NavBar Items (left-most window)                  */
/* ================================================ */
.nav_item {
    width: 100%;
}

.nav_user_name {
    height: 2em;
    line-height: 2.5em;
    text-indent: 2.75em;
}

.nav_user_name::before {
    position: absolute;
    top: var(--bbj-space);
    left: var(--bbj-space);
    width: 2.5em;
    height: 2.5em;
    background: var(--app-color-primary);
    border-radius: 100%;
    text-indent: initial;
    text-align: center;
    line-height: 2.5em;
    color: var(--bbj-color-white);
    font-weight: 700;
}


/* Task Property Sheet Styling */
.BBjTopLevelWindow.BBjDialog {
    margin: auto;
}

.winTaskPropertiesContainer.BBjTopLevelWindow {
    /* Had to over-specify to "win the specificity battle" with DWC */
     max-height: 90vh;
     overflow: auto;
     max-width: max(300px, 40vw);
}

.winTaskProperties .BBjPanel {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    /* max-width: 40vw; */
    padding: var(--bbj-space-l);
    gap: var(--bbj-space-m);
    /* width: max(300px, 40vw); */
}

.winTaskProperties .BBjPanel .BBjControl {
    width: 100%;
}

.winTaskProperties .BBjPanel .BBjInputD,
.winTaskProperties .BBjPanel .BBjListButton {
    flex: 1 1 auto;
    min-width: 10em;
    width: auto;
}

.winTaskProperties .BBjPanel .BBjButton {
    flex: 1 1 25%;
    min-width: 10em;
    width: auto;
    /* align-self: flex-end; */
}

@media (max-height: 600px) {
    .winTaskPropertiesContainer.BBjTopLevelWindow {
        width: 90%; /* Expand width to 100% when screen height is too small */
        max-width: none; /* Remove maximum width constraint */
    }
}

@media (max-width: 500px) {
    .winNavBar {
        display: none;
    }

    .winMain .BBjPanel {
        grid-template-columns: 0 1fr;
    }

    .winTasks {
        padding: 5% 5%;
    }
}

/* .winTaskProperties .BBjChildWindow {
    display: flex;
    flex-flow: row;
    justify-content: space-between;
    margin-top: 1em;
    padding: var(--bbj-focus-ring-width);
}
*/

/* Day and Date headers for TaskList window         */
/* ================================================ */
.labelDay {
    font-size: 1.5em;
    font-weight: bold;
}
.labelDate {
    color: var(--app-color-text-light);
    font-size: 0.90em;
    font-weight: normal;
}

.BBjDialogGlassPane {
    background-color: hsla(0, 0%, 0%, 0.5);
}


/* Task Styling                                     */
/* ================================================ */
.task {
	display: grid;
	grid-template-columns: .5fr 8fr 2fr;
	grid-column-gap: 5px;
    max-height: 4.5em;
    border: transparent;
    border-bottom-color: var(--bbj-color-gray-80);
    margin-bottom: 5px;
}

.task .BBjStaticText {
    font-family: var(--app-font-task);
    font-size: 1.1em;
    font-weight: 500;
}

/* Task items that are incomplete */
.incomplete::part(input-wrapper) {
    border-color: var(--bbj-color-gray-50);
    background-color: var(--bbj-color-white);
}

/* Task items that are complete */
.complete {
	text-decoration: line-through;
}
.complete::part(input-wrapper) {
	border-color: rgb(110, 161, 110);
	background-color: rgba(110, 161, 110, .5);
    color: var(--bbj-color-black);
}

/* Task items that are deferred */
.deferred::part(input-wrapper) {
    border-color: rgb(167, 151, 66);
    background-color: rgba(167, 151, 66, .5);
}

/* Task items that are blocked */
.blocked::part(input-wrapper) {
    border-color: rgb(197, 124, 124);
    background-color: rgba(197, 124, 124, .5);
}

/* Items that are clickable, and hovered over */
.clickable:hover {
    filter: brightness(80%);
}

/* Checkbox styling on task-list-view */
.checkbox::part(input-wrapper) {
	border-radius: 100%;
	color: var(--bbj-color-black);
	margin-right: 2px;
	filter: scale(2);
}

/* Adds check mark on hover of checkbox */
.checkbox:not(bbj-checked):hover::part(checked-icon) {
    transform: scale(1) translate3d(0px, 0px, 0px);
    transition: 500ms ease-in-out;
    opacity: 0.765;
}

/* Title styling on task-list-view */
.title-display {
	font-weight: 700;
	white-space: nowrap;
	text-overflow: ellipsis;
	max-width: 80%;
}

/* Indicator flag styling on task-list-view */
.priority-flag {
	font-size: 15px;
	background-color: transparent;
	justify-self: right;
}

/* Description styling on task-list-view */
.description-display {
  	white-space: nowrap;
  	max-width: 90%;
	opacity: .5;
    text-overflow: ellipsis;
}


/*  Task due today and past due badges              */
/* ================================================ */
.due-today {
	color: var(--bbj-color-danger);
	justify-self: right;
	white-space: nowrap;
}

.past-due {
	font-weight: 700;
}


/*  Priority flags and popup menus                  */
/* ================================================ */
.priority-0 {
	color: black;
	opacity: .7;
}

.priority-1 {
	color: #2c80d4;
}

.priority-2 {
	color: #47942f;
}

.priority-3 {
	color: #f5e102;
}

.priority-4 {
	color: #f58402;
}

.priority-5 {
	color: #f50202;
}

.menu-item::part(control) {
	padding: none;
}

.menu-item::part(label) {
	display: none;
}

.menu_collapse::part(control) {
    height: 3em;
}


/*  Toolbar Icons                                   */
/* ================================================ */
.toolbar_icon::part(control), .toolbar_icon::part(control)::before {
    background: transparent;
    color: var(--app-color-text-faint);
    transition: all 100ms ease;
    border-color: transparent;
    border-radius: 0.5em;
}
.toolbar_icon::part(control):hover, .toolbar_icon::part(control):hover::before {
    border-color: transparent;
    color: var(--app-color-text-normal);
}

.icon_reload.toolbar_icon::part(control) {
    color: var(--bbj-color-danger);
    opacity: 0.75;
    transition: all 0.1s ease-in-out;
}
.icon_reload.toolbar_icon::part(control):hover {
    opacity: 1.0;
    background: var(--bbj-color-danger);
    color: var(--bbj-color-white);
}


/* FAB (Floating Action Button) to add a task       */
/* ================================================ */
.btnAddTaskFAB {
    position: absolute;
    right: 1em;
    bottom: 1em;
    z-index: 1000;
    width: 3em;
    height: 3em;
    line-height: 1.25rem;
}
.btnAddTaskFAB::part(control) {
    border-radius: 100em;
    box-shadow: 0 0.1em 0.5em hsla(0, 0%, 0%, 0.35);
}
.btnAddTaskFAB::part(label) {
    font-size: 200%;
}

